test/Fail/Issue1913b.err
Issue1913b.agda:17.13-14: error: [InstanceNoCandidate]
No instance of type M.D was found in scope.
when checking that the expression ! has type M.D
